--- a/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
+++ b/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RailroadPortalClassLibrary\RailroadPortalClassLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
