Site administrator authorization added

--- a/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
+++ b/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
@@ -5,6 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RailroadPortalClassLibrary\RailroadPortalClassLibrary.csproj" />
   </ItemGroup>
 
