--- a/TCH2_WestSiberianRailroad/appsettings.json
+++ b/TCH2_WestSiberianRailroad/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=TCH2_WestSiberianRailroadDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
