--- a/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
+++ b/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\fonts\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <ItemGroup>
