--- a/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
+++ b/TCH2_WestSiberianRailroad/TCH2_WestSiberianRailroad.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\fonts\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\audio\" />
   </ItemGroup>
 
   <ItemGroup>
